--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -40,9 +40,9 @@
 // to make views framework-neutral
 main {
   @include twelve-columns;
-  background-color: #eee;
+  background-color: #abc;
   }
 section {
   @extend .row;
-  margin-top: 20px;
+  margin-top: 35px;
   }
